# nox

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
crates/leimu/: Cargo.toml
crates/leimu-proc/: Cargo.toml
crates/leimu-proc/src/: build_structure.rs  error.rs  lib.rs  nox_ash_structure.rs  track.rs  vk_to_rust_enum.rs
crates/leimu/src/: gpu.rs  lib.rs  macros.rs  nox.rs  sync.rs
crates/leimu/src/gpu/: attributes.rs  buffer.rs  definitions.rs  descriptor.rs  device.rs  enums.rs  event.rs  ext.rs  extendable.rs  image.rs  instance.rs  memory_layout.rs  physical_device.rs  pipeline.rs  queue.rs  resources.rs  sampler.rs  shader.rs  shader_set.rs  subresource_state.rs  surface.rs  swapchain.rs
crates/leimu/src/nox/: event.rs  event_loop.rs  platform.rs  win.rs
crates/nox/: '  :w  Cargo.toml
crates/nox-mem/: CHANGELOG.md  Cargo.toml  README.md
crates/nox-mem/src/: alloc.rs  allocator.rs  arena.rs  as_raw.rs  bit.rs  borrow.rs  capacity_error.rs  capacity_policy.rs  cell.rs  collections.rs  conditional.rs  const_fn.rs  dynamic.rs  errors.rs  global_alloc.rs  hashable.rs  iter.rs  lib.rs  macros.rs  mad_cell.rs  num.rs  option.rs  option_alloc.rs  plain.rs  reserve.rs  result.rs  ser.rs  slice.rs  slice_cast.rs  slot_alloc.rs  slot_map.rs  smallbox.rs  string.rs  string_types.rs  sync_cell.rs  triv.rs  type_registery.rs  vec.rs  vec_types.rs
crates/nox-mem/src/borrow/: boxed.rs  cow.rs  map.rs  no_std.rs
crates/nox-mem/src/cell/: init_cell.rs
crates/nox-mem/src/dynamic/: owned.rs  pair.rs
crates/nox-mem/src/ser/: reader.rs  ser.rs  writer.rs
crates/nox-mem/src/string/: array_string.rs
crates/nox-mem/src/string_types/: array_string.rs
crates/nox-mem/src/triv/: maybe_triv.rs  triv.rs
crates/nox-mem/src/vec/: alloc_vec.rs  array_vec.rs  non_null.rs  pointer.rs  traits.rs  vector.rs
crates/nox-mem/src/vec_types/: alloc_vec.rs  array_vec.rs  error.rs  ghost_vec.rs  global_vec.rs  iter.rs  phantom_vec.rs  pointer.rs  strategies.rs  vector.rs
crates/nox-spirv/: CHANGELOG.md  Cargo.toml  README.md
crates/nox-spirv/src/: core.rs  lib.rs  module.rs  op.rs  reflect.rs  stream.rs
crates/nox-spirv/src/op/: common.rs  definitions.rs  enums.rs  inst_info.rs
crates/nox-spirv/src/reflect/: error.rs
crates/nox/src/: allocator_traits.rs  attributes.rs  byte_hash.rs  clipboard.rs  constants.rs  dev.rs  dyn_alloc.rs  error.rs  errors.rs  event.rs  global_alloc.rs  globals.rs  gpu.rs  init_settings.rs  interface.rs  lib.rs  map_types.rs  memory.rs  misc.rs  nox.rs  on_init.rs  renderer.rs  serialization.rs  stack_alloc.rs  sync.rs  utility.rs  version.rs
crates/nox/src/asset_importer/: error_types.rs  importer.rs
crates/nox/src/dev/: error_context.rs
crates/nox/src/error/: any.rs
crates/nox/src/globals/: data.rs  ref.rs
crates/nox/src/gpu/: attributes.rs  buffer.rs  commands.rs  context.rs  definitions.rs  descriptor.rs  device.rs  enums.rs  event.rs  ext.rs  frame_context.rs  frame_graph.rs  global_resources.rs  handle.rs  host.rs  image.rs  instance.rs  interface.rs  linear_device_alloc.rs  memory_binder.rs  memory_layout.rs  physical_device.rs  queue.rs  resources.rs  sampler.rs  shader.rs  shader_resource.rs  shader_set.rs  structs.rs  subresource_state.rs  surface.rs  swapchain.rs  swapchain_context.rs  swapchain_pass.rs  thread_context.rs  util.rs  vulkan.rs  vulkan_context.rs
crates/nox/src/map_types/: alloc_map.rs  iter.rs
crates/nox/src/nox/: event.rs  event_loop.rs  expand_error.rs  image_buffer.rs  init_settings.rs  platform.rs  win.rs  window_context.rs  window_ctx.rs
crates/nox/src/on_init/: data.rs  ref.rs
crates/nox/src/renderer/: buffer.rs  buffer_allocator.rs  commands.rs  ctx.rs  default_binder.rs  descriptor_pool.rs  device_allocators.rs  enums.rs  errors.rs  frame.rs  frame_graph.rs  frame_state.rs  global_resources.rs  handle.rs  helpers.rs  image.rs  image_state.rs  linear_device_alloc.rs  memory_binder.rs  memory_layout.rs  physical_device.rs  pipeline.rs  pipeline_cache.rs  shader.rs  shader_fn.rs  structs.rs  swapchain_context.rs  swapchain_pass.rs  thread_context.rs  transient_allocator.rs  vulkan_context.rs
crates/nox/src/serialization/: traits.rs
crates/nox/src/string_types/: dyn_string.rs
crates/nox/src/vec_types/: array_vec.rs
crates/tuhka/: Cargo.toml
crates/tuhka/src/: core_gen.rs  device.rs  extension_gen.rs  instance.rs  lib.rs  library.rs  option.rs  result.rs  vk.rs
crates/tuhka/src/vk/: base_types.rs  chainable.rs  defines.rs  enums.rs  handles.rs  structs.rs  type_defs.rs  vk_video.rs
crates/tuhka/tools/autogen/: Cargo.toml
crates/tuhka/tools/vk_video/: .gitignore  Cargo.toml
(+469 files in other folders)
