[workspace]
resolver = "3"
members = [
	"crates/nox",
	"crates/nox-font",
	"crates/nox-mem",
	"crates/nox-ser",
	"crates/nox-alloc",
	"crates/nox-geom",
	"crates/nox-gui",
	"crates/nox-log",
	"crates/nox-error",
	"crates/nox-proc",
	"crates/nox-threads", "crates/nox-ash",
]

exclude = [
	"examples",
]
