[package]
name = "nox-mem"
version = "0.1.0"
edition = "2024"
description = "Custom allocator collections and utilities"
license = "MIT or Apache-2.0"
repository = "https://github.com/eikkukek/nox"
readme = "README.md"
keywords = ["allocator", "arena", "slotmap", "container", "vector"]
categories = ["data-structures", "memory-management", "no-std", "no-std::no-alloc"]

[dependencies]
paste = "1.0"

[features]
default = ["std"]
std = []
