[package]
name = "nox"
version = "0.1.0"
edition = "2024"

[dependencies]
nox-mem = { path = "../nox-mem" }
nox-alloc = { path = "../nox-alloc" }
nox-derive = { path = "../nox-derive" }
nox-font = { path = "../nox-font" }

ash = "0.38.0"
ash-window = "0.13.0"
raw-window-handle = "0.6.0"
winit = "0.30"
rspirv-reflect = "0.9.0"
shaderc = "0.9.1"
fxhash = "0.2.1"
memmap2 = "0.9.7"
