[package]
name = "nox"
version = "0.1.0"
edition = "2024"

[dependencies]
nox-mem = { path = "../nox-mem" }
nox-alloc = { path = "../nox-alloc" }
nox-derive = { path = "../nox-derive" }

ash = "0.38.0"
ash-window = "0.13.0"
raw-window-handle = "0.6.0"
winit = "0.30"
spirv-cross2 = { version = "0.4.6", default-features = false }
shaderc = "0.9.1"
memmap2 = "0.9.7"
rustc-hash = "2.1.1"
compact_str = { version = "0.9.0" }
token-cell = "2.0.0"
